--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,75 @@
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 14px;
+    font-family: Lucida Grande, sans-serif;
+    font-size: 16px;
+    color: #666;
+    box-sizing: border-box;
+    border: 1px solid #aaaaaaaa; 
+    border-width: thin;
+    width: 85%;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: #f1f1f1;
 }
-h1 {
+#banner h1 {
     font-size: 5em;
+    margin-top: 0px;
     margin-bottom: 0px;
+    color: black;
 }
 #banner {
     text-align: right;
     background-image: url("images/hero.png");
+    background-size: contain;
     background-repeat: no-repeat;
-    background-size: 950px 495px;
-    height: 500px;
+    height: 677px;
     background-color: white;
-    padding-right: 5px;
+    padding-right: 60px;
     border: 2px;
 }
 h2 {
-    color: dimgray;
     margin-top: 0px;
 }
-p {
-    color: dimgray;
-}
-#section {
-    background-image: linear-gradient(lightgrey, white);
+
+h3 {
+    color: black;
 }
 
-body{
-  margin: 5px 40px 5px 40px auto;
-  padding: 5px;
-  background-color: lightgrey;
-  border: 2px;
-  border-color: black;
+.section {
+    background-image: url("images/gradient.png");
+    border-top: rgb(223, 223, 223);
+    background-repeat: repeat-x;
+    padding: 25px;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 10px;
+    display: grid;
+}
+a {
+    color: #08c;
+    text-decoration: none;
 }
 
 #content {
     background-color: white;
-    border: 1px;
-    border-color:black;
+    padding-bottom: 15px;
+    padding-top:50px;
 }
+table {
+    border-collapse: collapse;
+    margin: 35px;
+    font-size: 10px;
+}
+
+th, td {
+    border: 1px solid #666;
+    padding: 15px;
+ }
+
+ img {
+    margin-left:auto; 
+    margin-right:auto;
+ }
+
+ table thead {
+    text-align: center;
+ }
